# essentia

./: .gitignore  CMakeLists.txt  wscript
.github/workflows/: build-cmake-windows.yml  build-cmake.yml  build-wheels-cibuildwheel.yml  win build
cmake/: EssentiaConfig.cmake.in  EssentiaUtilities.cmake
cmake/modules/: FindChromaprint.cmake  FindFFTW3.cmake  FindFFTW3f.cmake  FindFFmpeg.cmake  FindGaia2.cmake  FindSampleRate.cmake  FindTaglib.cmake  FindTensorFlow.cmake  FindVampSdk.cmake  FindYAML.cmake  python-wheel.cmake  setup.py.in
doc/sphinxdoc/: models.rst
packaging/: build-dependencies-msvc.bat
src/: CMakeLists.txt  version.h.in  wscript
src/algorithms/: CMakeLists.txt  essentia_algorithms_reg_2.cpp  essentia_algorithms_reg_2.h.in
src/algorithms/audioproblems/: CMakeLists.txt  humdetector.cpp
src/algorithms/complex/: CMakeLists.txt
src/algorithms/experimental/: CMakeLists.txt
src/algorithms/extractor/: CMakeLists.txt  freesoundextractor.h  musicextractor.h
src/algorithms/filters/: CMakeLists.txt
src/algorithms/highlevel/: CMakeLists.txt
src/algorithms/io/: CMakeLists.txt  audioloader.cpp  audioloader.h  fileoutputproxy.h
src/algorithms/machinelearning/: CMakeLists.txt  tensorflowpredict.cpp
src/algorithms/rhythm/: CMakeLists.txt  onsetdetectionglobal.cpp  superfluxnovelty.cpp  superfluxnovelty.h  superfluxpeaks.cpp  superfluxpeaks.h
src/algorithms/sfx/: CMakeLists.txt
src/algorithms/spectral/: CMakeLists.txt  spectrumtocent.cpp  spectrumtocent.h  triangularbands.cpp  triangularbands.h
src/algorithms/standard/: CMakeLists.txt  fftkcomplex.h  ifftkcomplex.h  maxfilter.h
src/algorithms/stats/: CMakeLists.txt
src/algorithms/synthesis/: CMakeLists.txt
src/algorithms/temporal/: CMakeLists.txt
src/algorithms/tonal/: CMakeLists.txt  key.cpp
src/essentia/: CMakeLists.txt  algorithmfactory.cpp  algorithmfactory.h  algorithmfactory_impl.h  connector.h  debugging.h  essentia.h  essentiamath.h  parameter.h  pool.h  roguevector.h  stringutil.h  threading.h  types.h
src/essentia/scheduler/: CMakeLists.txt  network.h  networkparser.h
src/essentia/streaming/: CMakeLists.txt  phantombuffer_impl.h  sinkbase.h  sourcebase.h  streamingalgorithm.h  streamingalgorithmcomposite.h
src/essentia/streaming/algorithms/: CMakeLists.txt  devnull.h  poolstorage.h
src/essentia/utils/: CMakeLists.txt  asciidag.h  asciidagparser.h  atomic.h  audiocontext.cpp  audiocontext.h  ringbufferimpl.h  synth_utils.h
src/essentia/utils/extractor_freesound/: CMakeLists.txt  FreesoundDescriptorsSet.h  FreesoundLowlevelDescriptors.h  FreesoundRhythmDescriptors.h  FreesoundSfxDescriptors.h  FreesoundTonalDescriptors.h
src/essentia/utils/extractor_music/: CMakeLists.txt  MusicDescriptorsSet.h  MusicLowlevelDescriptors.h  MusicRhythmDescriptors.h  MusicTonalDescriptors.h
src/essentia/utils/tnt/: jama_eig.h  jama_lu.h  jama_svd.h
src/examples/: CMakeLists.txt  credit_libav.h
src/examples/music_extractor/: extractor_utils.h
src/examples/python/.ipynb_checkpoints/: essentia_python_tutorial-checkpoint.ipynb
src/python/: CMakeLists.txt
src/python/pytypes/: tensorreal.cpp  vectortensorreal.cpp
test/src/basetest/: CMakeLists.txt
