target_sources(essentia
  PRIVATE
    accumulatoralgorithm.cpp
    algorithms
    phantombuffer_impl.h
    sinkbase.cpp
    sourcebase.cpp
    streamingalgorithm.cpp
    streamingalgorithmcomposite.cpp
    streamingalgorithmwrapper.cpp
    accumulatoralgorithm.h
    multiratebuffer.h
    phantombuffer.h
    sink.h
    sinkbase.h
    sinkproxy.h
    source.h
    sourcebase.h
    sourceproxy.h
    streamingalgorithm.h
    streamingalgorithmcomposite.h
    streamingalgorithmwrapper.h
)

target_include_directories(essentia
  PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
)

add_subdirectory(algorithms)
